bin/tui/src/snapshots/tui__snapshot_tests__snap_markdown_code_block.snap
---
source: bin/tui/src/snapshot_tests.rs
expression: out
---
" Session: s1─────────────────────────────────────────────────────────── [idle]  "
" ╭User────────────────────────────────────────────────────────────────────────╮ "
" │ show code                                                                  │ "
" ╰────────────────────────────────────────────────────────────────────────────╯ "
"                                                                                "
" ╭────────────────────────────────────────────────────────────────────────────╮ "
" │ Here is some code:                                                         │ "
" │                                                                            │ "
" │ ```rust                                                                    │ "
" │ fn main() {                                                                │ "
" │     println!("hello");                                                     │ "
" │ }                                                                          │ "
" │ ```                                                                        │ "
" │                                                                            │ "
" │ Done.                                                                      │ "
" ╰────────────────────────────────────────────────────────────────────────────╯ "
"                                                                                "
"                                                                                "
"                                                                                "
" ╭[INSERT]────────────────────────────────────────────────────────────────────╮ "
" │                                                                            │ "
" │                                                                            │ "
" ╰────────────────────────────────────────────────────────────────────────────╯ "
"  q×2 quit · Ctrl+R run · Ctrl+E edit · Enter send · Ctrl-J ⏎ · vim · y/n/e · T "
