bin/tui/src/snapshots/tui__snapshot_tests__snap_palette_dark.snap
---
source: bin/tui/src/snapshot_tests.rs
expression: out
---
" Session: s1─────────────────────────────────────────────────────────── [idle]  "
" ╭User────────────────────────────────────────────────────────────────────────╮ "
" │ colored                                                                    │ "
" ╰────────────────────────────────────────────────────────────────────────────╯ "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"  1 message waiting — no loop running — waiting for Ctrl+R run                  "
"   1. colored                                                                   "
" ╭[INSERT]────────────────────────────────────────────────────────────────────╮ "
" │                                                                            │ "
" │                                                                            │ "
" ╰────────────────────────────────────────────────────────────────────────────╯ "
"  q×2 quit · Ctrl+R run · Ctrl+E edit · Enter send · Ctrl-J ⏎ · vim · y/n/e · T "
