bin/tui/src/snapshots/tui__snapshot_tests__snap_palette_open.snap
---
source: bin/tui/src/snapshot_tests.rs
expression: out
---
" Session: none───────────────────────────────────────────────────────── [idle]  "
"  (no session yet — type the new session name below, Enter confirms)            "
"                                                                                "
"                                                                                "
"                                                                                "
"                ╭commands (compact) — 12 items─────────────────╮                "
"                │╭commands────────────────────────────────────╮│                "
"                ││❯ R toggle-tools  Ctrl+O                    ││                "
"                ││  R toggle-thinking  Ctrl+X                 ││                "
"                ││  R expand-thinking  Ctrl+T                 ││                "
"                ││  S thinking level  medium                  ││                "
"                ││  G b                                       ││                "
"                ││  G tree                                    ││                "
"                ││  R bn                                      ││                "
"                ││  R bp                                      ││                "
"                ││  R new-session                             ││                "
"                │╰────────────────────────────────────────────╯│                "
"                │:  enter ok · esc close · ctrl-j/k move · ctrl│                "
"                ╰──────────────────────────────────────────────╯                "
" ╭[INSERT]────────────────────────────────────────────────────────────────────╮ "
" │                                                                            │ "
" │                                                                            │ "
" ╰────────────────────────────────────────────────────────────────────────────╯ "
"  q×2 quit · Ctrl+R run · Ctrl+E edit · Enter send · Ctrl-J ⏎ · vim · y/n/e · T "
