bin/tui/src/snapshots/tui__snapshot_tests__snap_pending_approval_banner.snap
---
source: bin/tui/src/snapshot_tests.rs
expression: out
---
" Session: s1─────────────────────────────────────────────────────────── [idle]  "
" ╭User────────────────────────────────────────────────────────────────────────╮ "
" │ delete file                                                                │ "
" ╰────────────────────────────────────────────────────────────────────────────╯ "
"             ⎿ 1 step · bash ×1                                                 "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"  1 message waiting — no loop running — waiting for Ctrl+R run                  "
"   1. delete file                                                               "
" approval appr-1 : Allow rm -rf /tmp/x?   [y allow]  [n deny]  [e edit]         "
" ╭[INSERT]────────────────────────────────────────────────────────────────────╮ "
" │                                                                            │ "
" │                                                                            │ "
" ╰────────────────────────────────────────────────────────────────────────────╯ "
"  q×2 quit · Ctrl+R run · Ctrl+E edit · Enter send · Ctrl-J ⏎ · vim · y/n/e · T "
