bin/tui/src/snapshots/tui__snapshot_tests__snap_pending_name_input.snap
---
source: bin/tui/src/snapshot_tests.rs
expression: out
---
" Session: new — ─────────────────────────────────────────────────────── [idle]  "
"  (no session yet — type the new session name below, Enter confirms)            "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
" ╭[INSERT]────────────────────────────────────────────────────────────────────╮ "
" │> _                                                                         │ "
" │                                                                            │ "
" ╰────────────────────────────────────────────────────────────────────────────╯ "
"  Enter confirm · Esc cancel · q×2 quit                                         "
